--- a/css/common.css
+++ b/css/common.css
@@ -4,7 +4,7 @@
 }
 
 .room {
-    fill: transparent;
+    fill: rgba(255, 255, 255, 0);
 }
 
 .light-on {
@@ -20,7 +20,7 @@
 }
 
 .perfect {
-    fill: transparent;
+    fill: rgba(255, 255, 255, 0);
 }
 
 .hot {
