--- a/css/house.css
+++ b/css/house.css
@@ -27,6 +27,7 @@
     fill: rgba(255, 0, 17, 0.19);
 }
 
-.html5-video-container, .html5-main-video {
-    display: none!important;
+.light,
+.curtains {
+    cursor: pointer;
 }
